Add dimension variables

--- a/source/stylesheets/index.sass
+++ b/source/stylesheets/index.sass
@@ -1,5 +1,6 @@
 @import "normalize.css"
 
 @import "./variables/colors.sass"
+@import "./variables/dimensions.sass"
 
 @import "./components/card.sass"
